# BSUIR_6

LOIS/1/: main.cpp
LOIS/1/src/: LogicFormula.hpp  Parser.cpp  Validator.cpp  Validator.hpp
LOIS/1/tests/: CTestTestfile.cmake  LOIS_1_tests[1]_include.cmake  Makefile  cmake_install.cmake
LOIS/2/: CMakeLists.txt  main.cpp
LOIS/2/src/: LogicFormula.cpp  LogicFormula.hpp  Parser.cpp  Parser.hpp  Table.cpp  Table.hpp
LOIS/3/: main.pl
StatOIV/1/: USA_cars.csv  lab1.ipynb
StatOIV/2/: ParisHousing.csv  lab2.ipynb
StatOIV/3/: 3.py  4.py  lab3.ipynb  lab4.ipynb
YAPIS/: base.ll
YAPIS/1/: 1.txt
YAPIS/2/: ExprGrammarLexer.g4  ExprGrammarParser.g4  RelScriptLexer.g4  RelScriptParser.g4  grun_display.sh  sample.rels
YAPIS/2 polya/: ExprParser.g4  antlr set  grun_display.sh  l1.txt  sample.txt
YAPIS/2 polya/.antlr/: ExprParser.interp  ExprParserBaseListener.java  ExprParserLexer.cpp  ExprParserLexer.h  ExprParserLexer.interp  ExprParserLexer.java  ExprParserLexer.tokens  ExprParserListener.java  ExprParserParser.java
YAPIS/2/.antlr/: ExprGrammarLexer.interp  ExprGrammarLexer.java  ExprGrammarLexer.tokens  ExprGrammarParser.interp  ExprGrammarParser.java  (+30 more)
YAPIS/2_пз/: grun_display.sh  practicLesson_2.g4  sample.txt
YAPIS/test_llvm/: CMakeLists.txt  base.ll  build.ll  data.bc  data.ll  linked.ll  main.cpp  program
YAPIS/test_llvm/.cache/clangd/index/: main.cpp.31653341F92AABE3.idx
YAPIS/test_llvm/datatype/: Set.cpp  Set.hpp
YAPIS/testing/: CMakeLists.txt  grun_display.sh  main.c  sample.txt  table.bc  testGrLexer.g4  testGrParser.g4
l3arya/: main1.py
(+63 files in other folders)
